--- a/app/src/main/res/layout/layout_item_startups.xml
+++ b/app/src/main/res/layout/layout_item_startups.xml
@@ -1,39 +1,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/margem_media"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/background_startups">
+    android:layout_marginBottom="@dimen/margem_media"
+    android:layout_marginLeft="@dimen/margem_minima"
+    android:layout_marginRight="@dimen/margem_minima"
+    android:background="@drawable/background_startups"
+    android:padding="@dimen/margem_media">
 
     <ImageView
         android:id="@+id/item_startup_ivLogo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:scaleType="centerCrop"
         android:src="@drawable/logo" />
 
     <TextView
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        android:layout_centerHorizontal="true"
         android:id="@+id/item_startup_tvNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_startup_ivLogo"
+        android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="@string/item_startup_nome" />
+        android:text="@string/item_startup_nome"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
 
     <TextView
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-        android:layout_centerHorizontal="true"
         android:id="@+id/item_startup_tvSegmento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_startup_tvNome"
+        android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="@string/item_startup_segmento" />
+        android:text="@string/item_startup_segmento"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
 
 
 </RelativeLayout>
