--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="black_overlay">#66000000</color>
     <color name="fundo_splash">#eb3f59</color>
-    <color name="fundo_padrao">#f7f6f6</color>
+    <color name="fundo_padrao">#e9e9e9</color>
+    <color name="fundo_claro">#ffffff</color>
 </resources>
